--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         # name of project folder or ./
         projectPath:
-          - ./
+          - igrojur/
         testMode:
           - playmode
           - editmode
